# winml-rs

./: Cargo.toml  inspect_onnx.py
src/: lib.rs  main.rs  onnx.rs
