[package]
name = "winml-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#paddleocr = "0.4.1"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Foundation",
    "Foundation_Collections",
    "AI",
    "AI_MachineLearning",
    "Graphics",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Media",
    "Media_Ocr",
    "implement",
    "Globalization"
]